# Todozee_Past-Life

./: .gitattributes  .gitignore  ESTIMATION_PLAN.xlsx  PLAN_OF_ACTION.xlsx  Past_Life.py  README.md  Todozee_Past-Life_AWS_Deployment.xlsx  aws-services.xlsx  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
past_life/: __init__.py  api.py  archetypes.py  astrology.py  gemma.py  logging_setup.py  models.py  narrative.py  orchestrator.py  payload.py  premium_archetypes.py  prompts.py  renderer.py  selection.py  storage.py  vedic.py  vocab.py
terraform/: .gitignore  .terraform.lock.hcl  cloudwatch_logs.tf  main.tf  outputs.tf  terraform.tfvars.example  user_data.sh.tpl  variables.tf  versions.tf
